--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,11 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    {% block nav %}
+        toto nav
+        {% endblock %}
+        {% block body %}
+        toto
+        {% endblock %}
     </body>
 </html>
